<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:shadowColor="#5167E3"
        android:text="@string/logo_name"
        android:textAlignment="center"
        android:textColor="@color/logo_text"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/hint_search"
        android:inputType="number"
        android:textSize="25sp"
        android:maxLength="9"
        android:textColor="@color/search_text_color"
        android:textColorHint="@color/hint_search_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_text"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="130dp"
        android:backgroundTint="@color/btn_search"
        android:textColor="@color/search_text_color"
        android:text="@string/btn_search"
        />

    <ListView
        android:id="@+id/requests_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_btn"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item"
        />

<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/requests_list"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/search_btn"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:layout_marginHorizontal="30dp"-->
<!--                android:textAlignment="textStart"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                tools:listitem="@layout/item"/>-->


        </RelativeLayout>